<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_size_20sp"
            android:text="@string/transaction_detail"
            android:textStyle="bold|italic"
            android:paddingStart="@dimen/small_size"
            android:background="#b3b3b3"
            />

        <TextView
            android:id="@+id/tv_transaction_date"
            android:padding="@dimen/medium_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/select_transaction_date"
            android:textSize="@dimen/medium_size"

            android:drawableRight="@drawable/ic_calender"/>

        <EditText
            android:id="@+id/et_transaction_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/summary2"
            android:padding="@dimen/medium_size"
            />

        <EditText
            android:id="@+id/et_transaction_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/description2"
            android:padding="@dimen/medium_size"
            />
        <EditText
            android:id="@+id/et_transaction_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/property2"
            android:padding="@dimen/medium_size"
            />

        <ImageView
            android:id="@+id/iv_transaction_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_size"

            android:layout_marginTop="@dimen/small_size"
            android:maxHeight="400dp"
            android:maxWidth="400dp"
            />
<!--        <Button
            android:id="@+id/btn_transaction_picture"
            android:layout_width="@dimen/button_normal"
            android:layout_height="wrap_content"
            android:text="Take a picture"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:padding="@dimen/small_size"
            android:layout_margin="@dimen/medium_size"
            android:textAllCaps="false"
            />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_size_20sp"
            android:text="@string/payment_detail"
            android:textStyle="bold|italic"
            android:paddingStart="@dimen/small_size"
            android:background="#b3b3b3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_type_of_transaction"
            android:layout_margin="@dimen/small_size"/>

        <Spinner
            android:id="@+id/sp_transaction_type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/medium_size">

        </Spinner>

<!--        <Spinner
            android:id="@+id/sp_transaction_landlord"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/medium_size">

        </Spinner>-->

        <EditText
            android:id="@+id/et_transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/amount_of_payment"
            android:padding="@dimen/medium_size"
            />

        <Button
            android:id="@+id/btn_transaction_add"
            android:layout_width="@dimen/button_normal"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_transaction"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:padding="@dimen/small_size"
            android:layout_margin="@dimen/medium_size"
            android:textAllCaps="false"
            />

    </LinearLayout>
</ScrollView>