<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/large_size"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
        android:id="@+id/et_Document_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:padding="@dimen/medium_size"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
        android:id="@+id/et_Document_Type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/type"
        android:padding="@dimen/medium_size"
        />

        </android.support.design.widget.TextInputLayout>
        <ImageView
            android:id="@+id/iv_Document_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_size"
            android:minHeight="@dimen/large_size"
            android:minWidth="@dimen/large_size"
            android:layout_marginTop="@dimen/small_size"
            android:maxHeight="400dp"
            android:maxWidth="400dp"
            />
        <Button
            android:id="@+id/btn_Document_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_a_picture"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:padding="@dimen/small_size"
            android:layout_margin="@dimen/small_size"
            />

        <Button
            android:id="@+id/btn_Document_ADD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_add_document"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:padding="@dimen/small_size"
            android:layout_margin="@dimen/small_size"
            />

    </LinearLayout>
</ScrollView>